--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
 [[tool.mypy.overrides]]
 module = "model_container.model_execution.py"
 ignore_missing_imports = true
+[tool.balck]
+line-length = 80
+skip-string-normalization = true
+skip_magic_trailing_comma = false
