continue work in api branch

--- a/model_container/Dockerfile
+++ b/model_container/Dockerfile
@@ -6,12 +6,12 @@ RUN pip install --upgrade pip
 RUN apt-get update && apt-get install -y libhdf5-dev
 RUN pip install --no-binary h5py h5py
 
-COPY ./model_container/requirements.txt /code/requirements.txt
+COPY ./requirements.txt /code/requirements.txt
 
 RUN pip install --no-cache-dir -r /code/requirements.txt
 
-COPY ./model_container /code/model_container
-COPY ./dummy_model /code/dummy_model
+COPY . /code/model_container
+
 
 EXPOSE 8080
 
