--- a/web_app/Dockerfile
+++ b/web_app/Dockerfile
@@ -5,6 +5,7 @@ WORKDIR /app
 
 COPY ./package*.json /app
 RUN npm install
+RUN npm install axios
 COPY ./public /app/public
 COPY ./src /app/src
 
@@ -15,5 +16,5 @@ RUN npm run build
 FROM nginx:1.25.0-alpine as production
 COPY --from=build /app/build /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/conf.d/default.conf
-EXPOSE 80
+EXPOSE 8070
 CMD ["nginx", "-g", "daemon off;"]
